--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,10 @@
 name: 'Hello World'
 description: 'Greet someone and record the time'
 inputs:
-  who-to-greet:  # id of input
-    description: 'Who to greet'
+  percent:  # id of input
+    description: 'failure mark'
     required: true
-    default: 'World'
+    default: '80'
 outputs:
   time: # id of output
     description: 'The time we greeted you'
